--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -9,7 +9,7 @@
 	<%= link_to "Manage Records", records_path %>
   <%= link_to "Manage DCO Offices", offices_path %>
   <%= link_to "Manage Notices", notices_path %>
-  <%= link_to "Back", :back %>
+  <%= link_to "Back", '/' %>
 <% end %>
 
 <h3>Pending Approval</h3>
