--- a/app/views/titles/index.html.erb
+++ b/app/views/titles/index.html.erb
@@ -15,7 +15,7 @@
       <%= link_to 'Show Disabled Titles', titles_path(category_id: @category, show_all: true) %>
     <% end %>
   <% end %>
-  <%= link_to 'Back', :back %>
+  <%= link_to 'Back', '/titles/' %>
 <% end %>
 
 <%= render "building_chooser" %>
