--- a/app/views/titles/_searchbar.html.erb
+++ b/app/views/titles/_searchbar.html.erb
@@ -2,4 +2,5 @@
 <input id="searchbar" type="text" placeholder="Search for a title...">
   <div id="searchbar-results">
   </div>
+  <% uniqname %>
 </div>
