--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -9,6 +9,7 @@
 	<%= link_to "Manage Records", records_path %>
   <%= link_to "Manage DCO Offices", offices_path %>
   <%= link_to "Manage Notices", notices_path %>
+  <%= link_to "Manage Users", users_path %>
   <%= link_to "Back", '/' %>
 <% end %>
 
